--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,9 +7,18 @@
 - name: Provision users and groups
   ansible.builtin.include_tasks:
     file: provision_users_and_groups.yml
+  tags:
+    - users
+    - groups
 - name: Prepare filesystem
   ansible.builtin.include_tasks:
     file: prepare_filesystem.yml
+  tags:
+    - filesystem
+    - directories
+    - permissions
 - name: Get install files
   ansible.builtin.include_tasks:
     file: download_install_files.yml
+  tags:
+    - download
