--- a/tasks/check_assertions.yml
+++ b/tasks/check_assertions.yml
@@ -1,5 +1,9 @@
-- name: Make sure required variables are defined
-  ansible.builtin.assert:
-    that:
-      - '".tar.gz" in iris_install_file'
-      - '".sh" in iris_instaserver_file'
+- name: Add tags to all tasks
+  tags:
+    - always
+  block:
+    - name: Make sure required variables are defined
+      ansible.builtin.assert:
+        that:
+          - '".tar.gz" in iris_install_file'
+          - '".sh" in iris_instaserver_file'
