--- a/tasks/define_variables.yml
+++ b/tasks/define_variables.yml
@@ -1,6 +1,8 @@
 ---
-- name: Define extracted install files directory
-  ansible.builtin.set_fact:
-    iris_extracted_install_files_path: "{{ iris_install_files_path }}/{{ iris_instaserver_file | basename | regex_replace('\\.sh$', '') }}"
+- name: Add tags to all tasks
   tags:
     - always
+  block:
+    - name: Define extracted install files directory
+      ansible.builtin.set_fact:
+        iris_extracted_install_files_path: "{{ iris_install_files_path }}/{{ iris_instaserver_file | basename | regex_replace('\\.sh$', '') }}"
