--- a/tasks/install_dependencies.yml
+++ b/tasks/install_dependencies.yml
@@ -1,10 +1,12 @@
 ---
-- name: Install dependencies
-  ansible.builtin.dnf:
-    name: "{{ item }}"
-    state: present
-  loop:
-    - "{{ iris_dependencies }}"
+- name: Add tags to all tasks
   tags:
     - dependencies
     - packages
+  block:
+    - name: Install dependencies
+      ansible.builtin.dnf:
+        name: "{{ item }}"
+        state: present
+      loop:
+        - "{{ iris_dependencies }}"
