add iris tag for all iris specific tasks

--- a/tasks/download_install_files.yml
+++ b/tasks/download_install_files.yml
@@ -2,6 +2,7 @@
 - name: Add tags to all tasks
   tags:
     - download
+    - iris
   block:
     - name: Copy install files via HTTP
       ansible.builtin.get_url:
