--- a/tasks/extract_install_files.yml
+++ b/tasks/extract_install_files.yml
@@ -2,6 +2,7 @@
 - name: Add tags to all tasks
   tags:
     - extract
+    - iris
   block:
     - name: Check if install files are already extracted
       ansible.builtin.stat:
