--- a/tasks/install_and_configure_tuned.yml
+++ b/tasks/install_and_configure_tuned.yml
@@ -3,6 +3,7 @@
   tags:
     - tuned
     - hugepages
+    - iris
   block:
     - name: Get the name of the correct package
       ansible.builtin.find:
