--- a/tasks/extract_install_files.yml
+++ b/tasks/extract_install_files.yml
@@ -15,3 +15,5 @@
         chdir: "{{ iris_install_files_path }}"
       when: not extracted_directory.stat.exists
       changed_when: not extracted_directory.stat.exists
+      # become: true
+      # become_user: "{{ iris_admin_user }}"
