--- a/tasks/install_and_configure_tuned.yml
+++ b/tasks/install_and_configure_tuned.yml
@@ -31,7 +31,7 @@
         mode: "0644"
         owner: root
         group: root
-        no_extra_spaces: true
+        # no_extra_spaces: true
         section: variables
         option: hugepagesz
         value: 1G
@@ -43,10 +43,59 @@
         mode: "0644"
         owner: root
         group: root
-        no_extra_spaces: true
+        # no_extra_spaces: true
         section: variables
         option: hugepages
         value: "{{ hugepages }}"
+
+    - name: Check if instance is AWS EC2
+      ansible.builtin.uri:
+        url: http://169.254.169.254/latest/api/token
+        method: PUT
+        headers:
+          X-aws-ec2-metadata-token-ttl-seconds: '21600'
+        timeout: 2
+      register: aws_uri_check
+      failed_when: False
+
+    - name: Check if instance is Azure VM
+      ansible.builtin.uri:
+        url: http://169.254.169.254/metadata/instance?api-version=2021-02-01
+        headers:
+          Metadata: "true"
+        timeout: 2
+      register: azure_uri_check
+      failed_when: False
+
+    # - name: Show results of AWS URI check
+    #   ansible.builtin.debug:
+    #     msg: "{{ aws_uri_check }}"
+
+    - name: Set kernel.unknown_nmi_panic = 1 if host is AWS EC2 instance
+      community.general.ini_file:
+        path: /etc/tuned/epic/tuned.conf
+        state: present
+        mode: "0644"
+        owner: root
+        group: root
+        # no_extra_spaces: true
+        section: sysctl
+        option: kernel.unknown_nmi_panic
+        value: "1"
+      when: aws_uri_check.status == 200
+
+    - name: Set kernel.unknown_nmi_panic = 1 if host is AWS EC2 instance or Azure VM
+      community.general.ini_file:
+        path: /etc/tuned/epic/tuned.conf
+        state: present
+        mode: "0644"
+        owner: root
+        group: root
+        # no_extra_spaces: true
+        section: bootloader
+        option: cmdline.4
+        value: "nosmt"
+      when: aws_uri_check.status == 200 or azure_uri_check.status == 200
 
     - name: Run tuned-adm profile command
       ansible.builtin.command: /usr/sbin/tuned-adm profile epic
