--- a/tasks/install_iris.yml
+++ b/tasks/install_iris.yml
@@ -2,7 +2,7 @@
 - name: Add tags to all tasks
   tags:
     - iris
-    - answerfile
+    # - answerfile
   block:
   - name: Check if Iris binary exists
     ansible.builtin.stat:
