Fixed name from kernel.unknow* to cmdline.4*

--- a/tasks/install_and_configure_tuned.yml
+++ b/tasks/install_and_configure_tuned.yml
@@ -84,7 +84,7 @@
         value: "1"
       when: aws_uri_check.status == 200
 
-    - name: Set kernel.unknown_nmi_panic = 1 if host is AWS EC2 instance or Azure VM
+    - name: Set cmdline.4 = nosmt if host is AWS EC2 instance or Azure VM
       community.general.ini_file:
         path: /etc/tuned/epic/tuned.conf
         state: present
