--- a/tasks/configure_ssh.yml
+++ b/tasks/configure_ssh.yml
@@ -1,7 +1,7 @@
 ---
 - name: Add tags to all tasks
   tags:
-    - ssh
+    - always
   block:
     - name: Configure sshd_config
       ansible.builtin.template:
