--- a/tasks/install_and_configure_tuned.yml
+++ b/tasks/install_and_configure_tuned.yml
@@ -1,9 +1,7 @@
 ---
 - name: Add tags to all tasks
   tags:
-    - iris
-    - tuned
-    - hugepages
+    - always
   block:
     - name: Get the name of the correct package
       ansible.builtin.find:
