--- a/tasks/configure_sshd.yml
+++ b/tasks/configure_sshd.yml
@@ -7,5 +7,5 @@
       ansible.builtin.template:
         src: "{{ sshd_template | default('sshd_config.j2') }}"
         dest: /etc/ssh/sshd_config
-      notify: Restart ssh
+      notify: Restart sshd
 
