--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -43,9 +43,9 @@
 
 - name: Customize SSH Config
   ansible.builtin.include_tasks:
-    file: configure_ssh.yml
+    file: configure_sshd.yml
   tags:
-    - ssh
+    - sshd
 
 - name: Populate known hosts
   ansible.builtin.include_tasks:
