add a task to configure /etc/hosts

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -35,6 +35,12 @@
     - users
     - groups
 
+- name: Configure Hosts File
+  ansible.builtin.include_tasks:
+    file: configure_hosts_file.yml
+  tags:
+    - hosts
+
 - name: Provision SSH keys
   ansible.builtin.include_tasks:
     file: ssh_keys.yml
