fixed bug/failure when running on only a single host

--- a/tasks/configure_hosts_file.yml
+++ b/tasks/configure_hosts_file.yml
@@ -32,3 +32,4 @@
       loop_control:
         label: "{{ item.key }}\t{{ item.value | join(' ') }}"
       become: true
+      when: hosts_entries is defined
