--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -35,6 +35,13 @@
     - users
     - groups
 
+- name: Configure sudoers
+  ansible.builtin.include_tasks:
+    file: configure_sudoers.yml
+  tags:
+    - sudoers
+    - sudo
+
 - name: Configure Hosts File
   ansible.builtin.include_tasks:
     file: configure_hosts_file.yml
