--- a/tasks/configure_sudoers.yml
+++ b/tasks/configure_sudoers.yml
@@ -3,11 +3,23 @@
   tags:
     - always
   block:
+    - name: show sudoers configuration
+      ansible.builtin.debug:
+        var: iris_sudoers
+
     - name: Configure sudoers
       ansible.builtin.template:
         src: sudoers.j2
-        dest: /etc/sudoers.d/{{ item.key.replace(".", "-") }}
+        dest: /etc/sudoers.d/{{ item.file_name | default(item.user.replace(".", "-")) }}
         owner: root
         group: root
         mode: "0400"
-      loop: "{{ sudoers | dict2items }}"
+      loop: "{{ iris_sudoers }}"
+      when: item.state is undefined or item.state == 'present'
+
+    - name: Remove sudoers configuration
+      ansible.builtin.file:
+        path: /etc/sudoers.d/{{ item.file_name | default(item.user.replace(".", "-")) }}
+        state: absent
+      loop: "{{ iris_sudoers }}"
+      when: item.state is defined and item.state == 'absent'
