don't print sudoers

--- a/tasks/configure_sudoers.yml
+++ b/tasks/configure_sudoers.yml
@@ -3,9 +3,9 @@
   tags:
     - always
   block:
-    - name: show sudoers configuration
-      ansible.builtin.debug:
-        var: iris_sudoers
+    # - name: show sudoers configuration
+    #   ansible.builtin.debug:
+    #     var: iris_sudoers
 
     - name: Configure sudoers
       ansible.builtin.template:
